welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:7: error: '(' expected but identifier found.
for compteur <- 1 to nbPas {
    ^Program:11: error: illegal start of simple expression
	}
        ^